# hyper

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  HyperConfig.cmake.in  LICENSE  README  TODO
config/: FindBoost.cmake  FindDL.cmake
doc/: conf.py  conf.py.in
doc/hyper/: devel.rst  first_agent.rst  hyper.rst  installation.rst  more_realist_first_agent.rst  tutorials.rst  what_is_hyper.rst
doc/hyper/devel/: grammar.rst  semantic.rst
doc/hyper/tutorials/: first_agent.rst  first_agent_genom.rst  more_realist_first_agent.rst
doc/man/: hyperc.rst
include/: CMakeLists.txt  hyperConfig.hh  version.hh.in
include/compiler/: ability.hh  ability_parser.hh  base_parser.hh  cond_block_parser.hh  condition_output.hh  depends.hh  exec_expression_output.hh  expression.hh  expression_ast.hh  extension.hh  extract_symbols.hh  extract_unused_result.hh  functions_call.hh  functions_def.hh  functions_def_parser.hh  import_exception.hh  import_parser.hh  logic_expression_output.hh  output.hh  parser.hh  recipe.hh  recipe_condition.hh  recipe_context.hh  recipe_expression.hh  recipe_expression_output.hh  recipe_parser.hh  rules_def_parser.hh  scope.hh  symbols.hh  symbols_parser.hh  task.hh  task_parser.hh  types.hh  types_fwd.hh  types_parser.hh  universe.hh  utils.hh
include/logic/: backward_chaining.hh  engine.hh  eval.hh  expression.hh  facts.hh  function_def.hh  logic_var.hh  rules.hh  unify.hh
include/model/: ability.hh  ability_impl.hh  ability_test.hh  abortable_function.hh  actor_impl.hh  compute_abort_expression.hh  compute_assert_expression.hh  compute_ensure_expression.hh  compute_expression.hh  compute_make_expression.hh  compute_task_tree.hh  compute_wait_expression.hh  compute_while_expression.hh  concurrent_queue.hh  discover_root.hh  eval_conditions_fwd.hh  evaluate_conditions.hh  evaluate_expression.hh  execute.hh  execute_impl.hh  future.hh  get_value.hh  logic_layer.hh  logic_layer_fwd.hh  logic_layer_impl.hh  main.hh  main_test.hh  operator.hh  proxy.hh  recipe.hh  recipe_fwd.hh  setter.hh  setter_impl.hh  task.hh  task_fwd.hh  types.hh  update.hh  update_impl.hh
include/network/: actor_protocol.hh  algorithm.hh  client_tcp_impl.hh  json_archive.hh  log.hh  log_level.hh  msg.hh  msg_constraint.hh  msg_log.hh  msg_name.hh  msg_proxy.hh  nameserver.hh  nameserver_tcp_impl.hh  ping.hh  proxy.hh  proxy_container.hh  proxy_visitor.hh  rpc.hh  runtime_error.hh  select_serialization.hh  server_tcp_impl.hh  socket_tcp_async_serialized.hh  socket_tcp_serialized.hh  types.hh  utils.hh
include/utils/: algorithm.hh
misc/: clean_g++.sed
share/: HyperNode.cmake
src/: CMakeLists.txt
src/compiler/: CMakeLists.txt  ability.cc  ability_parser.cc  condition_output.cc  depends.cc  exec_expression_output.cc  expression.cc  expression_ast.cc  expression_ast_validate.cc  expression_typeOf.cc  extension.cc  extract_symbols.cc  extract_unused_result.cc  functions_call.cc  functions_def.cc  functions_def_parser.cc  logic_expression_output.cc  parser.cc  recipe.cc  recipe_condition.cc  recipe_context.cc  recipe_expression.cc  recipe_expression_output.cc  recipe_parser.cc  rules_def_parser.cc  scope.cc  symbols.cc  symbols_parser.cc  task.cc  task_parser.cc  types.cc  types_parser.cc  universe.cc  utils.cc
src/hyperc/: CMakeLists.txt  hyperc.cc
src/hyperlog/: hyperlog.cc
src/hyperruntime/: CMakeLists.txt  hyperruntime.cc
src/logic/: backward_chaining.cc  engine.cc  expression.cc  facts.cc  function_def.cc  logic_var.cc  rules.cc  unify.cc
src/model/: ability.cc  ability_test.cc  abortable_function.cc  compute_abort_expression.cc  compute_assert_expression.cc  compute_ensure_expression.cc  compute_make_expression.cc  compute_task_tree.cc  compute_wait_expression.cc  compute_while_expression.cc  discover_root.cc  execute.cc  logic_layer.cc  main.cc  proxy.cc  recipe.cc  task.cc  types.cc  update.cc
src/network/: CMakeLists.txt  msg.cc  nameserver.cc  nameserver_tcp_impl.cc  ping.cc  runtime_error.cc
test/: CMakeLists.txt  example.ability  other.ability  test_compiler_ability.cc  test_compiler_function_defs.cc  test_compiler_functions_call.cc  test_compiler_output.cc  test_compiler_parser.cc  test_compiler_recipe.cc  test_compiler_symbols.cc  test_compiler_task.cc  test_compiler_types.cc  test_compiler_utils.cc  test_logic_engine.cc  test_logic_eval.cc  test_logic_expression.cc  test_logic_facts.cc  test_logic_function_def.cc  test_logic_rules.cc  test_logic_unify.cc  test_logic_var.cc  test_model_ability.cc  test_model_abortable_function.cc  test_model_compute_assert_expression.cc  test_model_compute_wait_expression.cc  test_model_execute.cc  test_model_proxy.cc  test_model_recipe.cc  test_model_setter.cc  test_model_task.cc  test_model_update.cc  test_network_actor_protocol.cc  test_network_algorithm.cc  test_network_json_archive.cc  test_network_logger.cc  test_network_msg.cc  test_network_nameserver.cc  test_network_proxy.cc  test_network_rpc.cc  test_network_tcp.cc  (+3 more)
