file(GLOB test_sources *.cc)
include_directories(${HYPER_SOURCE_DIR}/include)
link_directories(${HYPER_BINARY_DIR}/src/compiler)
add_executable(test_hyper ${test_sources})
target_link_libraries(test_hyper ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
target_link_libraries(test_hyper ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(test_hyper ${Boost_THREAD_LIBRARY})
target_link_libraries(test_hyper ${Boost_SYSTEM_LIBRARY})
target_link_libraries(test_hyper ${Boost_SERIALIZATION_LIBRARY})
target_link_libraries(test_hyper HyperCompiler)
target_link_libraries(test_hyper HyperNetwork)
add_test(hyper test_hyper)

find_program(LN NAMES "ln")
file(GLOB TEST_FILES *.ability)
foreach (TESTFILE ${TEST_FILES})
execute_process(COMMAND ${LN} "-s" "${TESTFILE}" "${HYPER_BINARY_DIR}")
endforeach(TESTFILE)
