file(GLOB test_compiler_sources test_compiler_*.cc test_superviseur.cc)
include_directories(${HYPER_SOURCE_DIR}/include)
link_directories(${HYPER_BINARY_DIR}/src/compiler)
add_executable(test_hyper_compiler ${test_compiler_sources})
target_link_libraries(test_hyper_compiler ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
target_link_libraries(test_hyper_compiler ${Boost_FILESYSTEM_LIBRARY})
target_link_libraries(test_hyper_compiler HyperCompiler)
add_test(hyperCompiler test_hyper_compiler)

file(GLOB test_network_sources test_network_*.cc test_superviseur.cc)
add_executable(test_hyper_network ${test_network_sources})
target_link_libraries(test_hyper_network ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
target_link_libraries(test_hyper_network ${Boost_THREAD_LIBRARY})
target_link_libraries(test_hyper_network ${Boost_SYSTEM_LIBRARY})
target_link_libraries(test_hyper_network ${Boost_SERIALIZATION_LIBRARY})
target_link_libraries(test_hyper_network HyperNetwork)
add_test(hyperNetwork test_hyper_network)

find_program(LN NAMES "ln")
file(GLOB TEST_FILES *.ability)
foreach (TESTFILE ${TEST_FILES})
execute_process(COMMAND ${LN} "-s" "${TESTFILE}" "${HYPER_BINARY_DIR}")
endforeach(TESTFILE)
